[project]
    name = "bike-radar"
    description = "Bike Radar is a free and open source web app for Nextbike users. It secures nearby rides for you by booking them as soon as they become available in your selected area."
    readme = "README.md"
    requires-python = ">=3.9"
    license = "AGPL-3.0"
    keywords = ["bike radar", "bike share", "bike sharing", "bikes", "nextbike", "radar"]
    authors = [{ name = "MC51 (Michael)", email = "bikeradar@data-dive.com" }]
    classifiers = [
        "Development Status :: 4 - Beta",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Programming Language :: Python",
    ]
    dependencies = [
        "dash-bootstrap-components==1.5.0",
        "dash-extensions~=1.0",
        "dash-leaflet==1.0.15",
        "dash==2.14.2",
        "geopy==2.4.1",
        "gunicorn==21.2.0",
    ]
    version = "0.2.2"

[project.urls]
    Documentation = "https://github.com/mc51/bike-radar#readme"
    Issues        = "https://github.com/mc51/bike-radar/issues"
    Source        = "https://github.com/mc51/bike-radar"

[tool.mypy]
    ignore_missing_imports = true

[build-system]
    requires      = ["hatchling"]
    build-backend = "hatchling.build"

[tool.rye]
    managed          = true
    dev-dependencies = ["black==23.12.1", "mypy==1.8.0", "pylint==3.0.3"]

[tool.hatch.metadata]
    allow-direct-references = true

[tool.hatch.build.targets.wheel]
    packages = ["src/bike_radar"]
